--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "keywords": [],
   "author": "Mehtab ALi",
   "license": "ISC",
-  "description": "Ecommerce rest api",
+  "description": "E-commerce rest api",
   "dependencies": {
     "@stripe/stripe-js": "^7.8.0",
+    "autocannon": "^8.0.0",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "concurrently": "^9.2.0",
